Fixes link spacing

--- a/static/index.css
+++ b/static/index.css
@@ -135,10 +135,10 @@ body {
 
 a {
 	text-decoration: none;
-	border-radius: 10px;
-	padding: 1px;
 	padding-left: 5px;
 	padding-right: 5px;
+	padding-top: 2px;
+	padding-bottom: 2px;
 	
 	background-color: #FFF;
 	color: #6090CF;
@@ -154,8 +154,6 @@ a:hover {
 }
 h1 a {
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	border-radius: 0px;
-	padding: 3px;
 }
 
 .close a {
